--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ elastic-transport==8.4.0
 elasticsearch==8.5.2
 email-validator==1.3.0
 fastapi==0.87.0
+fastapi-paginate
+fastapi-pagination
 fastapi-utils==0.2.1
 filelock==3.8.0
 frozenlist==1.3.3
@@ -40,10 +42,10 @@ PyYAML==6.0
 redis==4.3.5
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==1.4.44
+SQLAlchemy
 starlette==0.21.0
 toml==0.10.2
-typing_extensions==4.4.0
+typing-extensions==4.10.0
 ujson==5.5.0
 urllib3==1.26.13
 uvicorn==0.20.0
